--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,17 +1,13 @@
-# SPDX-FileCopyrightText: Copyright Contributors to the GXF project
-#
-# SPDX-License-Identifier: Apache-2.0
 name: Gradle Pipeline
-
-on:
+'on':
   push:
-    branches: [ "main" ]
-    tags: [ "v**" ]
+    branches:
+      - main
+    tags:
+      - v**
   pull_request:
-    branches: [ "main" ]
-
-permissions: write-all
-
+    branches:
+      - main
 jobs:
   build:
     name: Gradle build and publish
@@ -25,14 +21,15 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: '21'
-          distribution: 'temurin'
-          cache: 'gradle'
+          distribution: temurin
+          cache: gradle
       - name: Setup Gradle to generate and submit dependency graphs
         uses: gradle/actions/setup-gradle@v4
         with:
           dependency-graph: generate-and-submit
       - name: Build with Gradle
-        run: ./gradlew build integrationTest testCodeCoverageReport integrationTestCodeCoverageReport sonar
+        run: ./gradlew build integrationTest testCodeCoverageReport integrationTestCodeCoverageReport
+          sonar
         env:
           GITHUB_ACTOR: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
