FDP-3254: Review PR comments

--- a/oslp-message-signing/src/main/resources/application.yaml
+++ b/oslp-message-signing/src/main/resources/application.yaml
@@ -1,4 +1,3 @@
 signing:
-  security:
-    provider: "SunEC"
-    algorithm: "SHA256withECDSA"
+  security-provider: "SunEC"
+  security-algorithm: "SHA256withECDSA"
